# Remote_Configuration_FASTAPI

./: User.db  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
devicesapis/: User.py  database.py  dependencies.py  main.py  models.py  schemas.py  secret.py
devicesapis/clientcalls/: apicall.py
devicesapis/dborm/: createrecord.py  createtable.py  deletetable.py  updaterecord.py
devicesapis/devices/: pm100d.py
devicesapis/templates/: index.html
tests/: test_devicesapis.py
